write lay abstract

--- a/Sections/03_Lay_abstract.Rmd
+++ b/Sections/03_Lay_abstract.Rmd
@@ -8,8 +8,4 @@ output:
 
 <!-- Remember, It can't be longer than 150 words! -->
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem massa, suscipit vel dapibus a, iaculis ut sapien. Duis eu tellus vitae ligula semper commodo. Morbi felis tortor, ullamcorper vitae venenatis sit amet, commodo eu tortor. Proin ultrices ipsum ipsum, sed viverra arcu maximus eget. Aliquam nec nisl rutrum quam tempus iaculis nec sed dui. Nulla vitae imperdiet neque. Morbi eget eleifend lectus. Etiam semper id purus et scelerisque. Suspendisse lectus libero, iaculis et arcu vel, mattis mollis odio.
-
-Phasellus quis metus erat. Nunc erat mi, posuere eleifend tortor quis, consequat dignissim metus. Pellentesque eget ante massa. Integer ultrices pulvinar varius. Sed dapibus sed arcu sit amet cursus. In hac habitasse platea dictumst. Aliquam vehicula est sed velit dapibus commodo. Donec placerat eu metus vel efficitur. Pellentesque commodo, nisi at elementum sagittis, erat magna feugiat elit, sit amet facilisis est diam eget tellus. Ut tellus velit, fringilla non consequat ut.
-
-
+The placenta is an important organ for a healthy pregnancy. DNA methylation is a molecular mark that helps the placenta control what genes are turned on and off. Past research indicates that DNAm is an important component of placental biology, and that when pregnancy complications occur, corresponding changes in DNAm can occur. However, our understanding of what controls placental DNAm itself is rudimentary. We need to understand what influences placental DNAm under normal, healthy conditions before we can understand it under other contexts like in disease. My thesis aims at understanding some of the major factors that influence placental DNAm. Throughout my research, I have also developed several analysis tools to help future placental DNAm research. Ultimately, my research has contributed to our understanding of the molecular characteristics of the placenta, which in turn helps us understand the role of placental biology during pregnancy. 
