--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -98,6 +98,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 
 
 \addcontentsline{toc}{section}{Table of Contents}
+\renewcommand*\contentsname{Table of Contents}
 
 \thispagestyle{empty}
 \begin{singlespace}
