add development background to dnam section

--- a/References/references.bib
+++ b/References/references.bib
@@ -2296,3 +2296,146 @@ Subject{\_}term{\_}id: biological-techniques;developmental-biology},
 	doi = {10.1073/pnas.1710470114},
 	url = {http://www.ncbi.nlm.nih.gov/pubmed/28830992}
 }
+
+@article{bird1985,
+	title = {A fraction of the mouse genome that is derived from islands of nonmethylated, CpG-rich DNA},
+	author = {{Bird}, {Adrian} and {Taggart}, {Mary} and {Frommer}, {Marianne} and {Miller}, {Orlando J.} and {Macleod}, {Donald}},
+	year = {1985},
+	month = {01},
+	date = {1985-01-01},
+	journal = {Cell},
+	pages = {91--99},
+	volume = {40},
+	number = {1},
+	doi = {10.1016/0092-8674(85)90312-5},
+	url = {https://www.sciencedirect.com/science/article/pii/0092867485903125},
+	langid = {en}
+}
+
+@article{moore2013,
+	title = {DNA Methylation and Its Basic Function},
+	author = {{Moore}, {Lisa D} and {Le}, {Thuc} and {Fan}, {Guoping}},
+	year = {2013},
+	month = {01},
+	date = {2013-01},
+	journal = {Neuropsychopharmacology},
+	pages = {23--38},
+	volume = {38},
+	number = {1},
+	doi = {10.1038/npp.2012.112},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3521964/},
+	note = {PMID: 22781841
+PMCID: PMC3521964}
+}
+
+@inbook{schulz2006,
+	title = {Methylation of Endogenous Human Retroelements in Health and Disease},
+	author = {{Schulz}, {W. A.} and {Steinhoff}, {C.} and {Florl}, {A. R.}},
+	editor = {{Doerfler}, {Walter} and {Böhm}, {Petra}},
+	year = {2006},
+	date = {2006},
+	publisher = {Springer},
+	pages = {211--250},
+	series = {Current Topics in Microbiology and Immunology},
+	doi = {10.1007/3-540-31181-5_11},
+	url = {https://doi.org/10.1007/3-540-31181-5_11},
+	note = {DOI: 10.1007/3-540-31181-5{\_}11},
+	address = {Berlin, Heidelberg},
+	langid = {en}
+}
+
+@article{elhamamsy2017,
+	title = {Role of DNA methylation in imprinting disorders: an updated review},
+	author = {{Elhamamsy}, {Amr Rafat}},
+	year = {2017},
+	month = {05},
+	date = {2017-05},
+	journal = {Journal of Assisted Reproduction and Genetics},
+	pages = {549--562},
+	volume = {34},
+	number = {5},
+	doi = {10.1007/s10815-017-0895-5},
+	url = {http://link.springer.com/10.1007/s10815-017-0895-5},
+	langid = {en}
+}
+
+@article{cotton2009a,
+	title = {Inactive X chromosome-specific reduction in placental DNA methylation},
+	author = {{Cotton}, {Allison M.} and {Avila}, {Luana} and {Penaherrera}, {Maria S.} and {Affleck}, {Joslynn G.} and {Robinson}, {Wendy P.} and {Brown}, {Carolyn J.}},
+	year = {2009},
+	month = {10},
+	date = {2009-10-01},
+	journal = {Human Molecular Genetics},
+	pages = {3544--3552},
+	volume = {18},
+	number = {19},
+	doi = {10.1093/hmg/ddp299},
+	url = {https://academic.oup.com/hmg/article/18/19/3544/2385630},
+	langid = {en}
+}
+
+@article{hackett2013,
+	title = {Germline DNA Demethylation Dynamics and Imprint Erasure Through 5-Hydroxymethylcytosine},
+	author = {{Hackett}, {Jamie A.} and {Sengupta}, {Roopsha} and {Zylicz}, {Jan J.} and {Murakami}, {Kazuhiro} and {Lee}, {Caroline} and {Down}, {Thomas A.} and {Surani}, {M. Azim}},
+	year = {2013},
+	month = {01},
+	date = {2013-01-25},
+	journal = {Science},
+	pages = {448--452},
+	volume = {339},
+	number = {6118},
+	doi = {10.1126/science.1229277},
+	url = {https://science.sciencemag.org/content/339/6118/448},
+	note = {Publisher: American Association for the Advancement of Science
+Section: Report
+PMID: 23223451},
+	langid = {en}
+}
+
+@article{hargan-calvopina2016,
+	title = {Stage-specific demethylation in primordial germ cells safeguards against precocious differentiation},
+	author = {{Hargan-Calvopina}, {Joseph} and {Taylor}, {Sara} and {Cook}, {Helene} and {Hu}, {Zhongxun} and {Lee}, {Serena A} and {Yen}, {Ming-Ren} and {Chiang}, {Yih-Shien} and {Chen}, {Pao-Yang} and {Clark}, {Amander T}},
+	year = {2016},
+	month = {10},
+	date = {2016-10-10},
+	journal = {Developmental cell},
+	pages = {75--86},
+	volume = {39},
+	number = {1},
+	doi = {10.1016/j.devcel.2016.07.019},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5064860/},
+	note = {PMID: 27618282
+PMCID: PMC5064860}
+}
+
+@article{fraser2016,
+	title = {Epigenetic reprogramming of the zygote in mice and men: on your marks, get set, go!},
+	author = {{Fraser}, {Rupsha} and {Lin}, {Chih-Jen}},
+	year = {2016},
+	month = {10},
+	date = {2016-10-20},
+	journal = {Reproduction (Cambridge, England)},
+	pages = {R211--R222},
+	volume = {152},
+	number = {6},
+	doi = {10.1530/REP-16-0376},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5097126/},
+	note = {PMID: 27601712
+PMCID: PMC5097126}
+}
+
+@article{xu2021,
+	title = {Insights into epigenetic patterns in mammalian early embryos},
+	author = {{Xu}, {Ruimin} and {Li}, {Chong} and {Liu}, {Xiaoyu} and {Gao}, {Shaorong}},
+	year = {2021},
+	month = {01},
+	date = {2021-01-01},
+	journal = {Protein & Cell},
+	pages = {7--28},
+	volume = {12},
+	number = {1},
+	doi = {10.1007/s13238-020-00757-z},
+	url = {https://doi.org/10.1007/s13238-020-00757-z},
+	note = {tex.ids= xuInsightsEpigeneticPatterns2021a},
+	langid = {en}
+}
