--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -36,20 +36,18 @@ In this dissertation, I explored some of the major contributors to placental DNA
 Despite all cells of the human body being nearly genetically identical, human cell types must coordinate a highly specific gene expression program to fulfill each of their own unique cellular niches.
 To achieve cell-specific gene expression programs, epigenetic processes function as the layer of molecular information that interacts with DNA to regulate gene expression.
 Types of epigenetic markers include DNAm, histones and their post-translational modifications, non-histone chromatin proteins, higher order chromatin and chromosome organization, and non-coding RNAs.
-DNAm is the most widely studied epigenetic mark, owing to its relative stability and cost-efficient technologies used for measurements.
+DNAm is the most widely studied epigenetic mark, owing to its relative stability and cost-efficient technologies.
 
-DNAm is highly correlated with gene expression.
-Typically, DNAm occurs at CpG islands, genomic regions with high CpG density that are often found near gene promoters, which interact with gene transcription proteins directly to repress nearby gene expression.
-For example, CpG methylation can interact directly with transcription factors or methyl-binding proteins to at promoters and enhancers to regulate transcription.
-DNAm outside of CpG islands is non-randomly distributed and can also influence gene expression, although the mechanisms remain difficult to characterize and most often these identified relationships are mostly correlative.
-However, 850k/EPIC Illumina DNAm microarrays are the most widely used high-throughput technology for DNAm studies, and improve over the previous generation of microarrays (450k) by covering distal regulatory elements in addition to CpG islands and gene-rich regions.
-Still, the 850k array covers \~850,000 CpG sites which is \~3% of all CpGs in the genome, which means that significant improvements towards greater genomic still remain.
+DNAm is highly anti-correlated with gene expression.
+CpG islands, which are genomic regions (\~1000bp long) with high CpG density often found near gene promoters, are often devoid of DNAm [@bird1985]. Methylation of DNA at CpG islands results in the silencing of gene expression, for example through the recruitment of repressive methyl-binding proteins, or by impairing transcription factor binding [@moore2013]. One of the main roles of DNA methylation is to also silence transposable and viral elements, which make up Approximately 45% of the mammalian genome [@schulz2006]. DNAm also serves important roles in regulating genomic imprinting [@elhamamsy2017], which is where only one parental allele is expressed, and in X-inactivation, which is the silencing of one X chromosomes in females [@cotton2009a].
+
+Developmentally, DNAm is highly dynamic and serves as an important marker that is reprogrammed for the generation and establishment of new genomes.
+DNA methylation is first erased during the maturation of primordial germ cells, owing to actions of TET enzymes that convert 5' methyl-cytosine (5'mc) to 5' hydroxymethyl-cytosine (5'hmc), and also to passive dilution through successive replicative events coupled with the absence of normal DNAm maintenance activity [@hackett2013; @hargan-calvopina2016]. During gametogenesis, maturation of sperm and egg cells, DNAm and other epigenetic marks are reesstablished in a highly cell-specific manner. But, after fertilization, the asymmetric epigenetics acquired in the sperm and egg genomes must now become equalized, and thus go through another round of reprogramming [@fraser2016]. With the exception of imprinted regions, which need their allele-specificity to be protected from this erasure, DNAm is erased in the paternal genome through primarily active processes governed by the TET family of enzymes, which is in contrast to the maternal DNAm erasure that occurs through mostly replicative-dependent passive dilution [@xu2021].
+Lastly, at the blastocyst stage, DNAm is at it's lowest point, and new epigenetic marks can begin establishing in a highly cell-specific manner, with many cell types and tissues not reaching their final differentiated profiles until later in life.
 
 ## Placental DNA methylation variation across human populations
 
-Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNA methylation (DNAm) exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012].
-Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment.
-This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
+Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNAm exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012]. Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment. This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
 However, unlike genetic markers, epigenetic markers are tissue-specific, and therefore a DNAm-based method developed in a specific tissue or population may not generalize well to other tissues with unique DNAm profiles, such as the placenta.
 
 In EWAS, confounding from population stratification is most often addressed using self-reported ethnicity/race to stratify study samples across the phenotype of interest.
