--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -45,6 +45,14 @@ Developmentally, DNAm is highly dynamic and serves as an important marker that i
 DNA methylation is first erased during the maturation of primordial germ cells, owing to actions of TET enzymes that convert 5' methyl-cytosine (5'mc) to 5' hydroxymethyl-cytosine (5'hmc), and also to passive dilution through successive replicative events coupled with the absence of normal DNAm maintenance activity [@hackett2013; @hargan-calvopina2016]. During gametogenesis, maturation of sperm and egg cells, DNAm and other epigenetic marks are reesstablished in a highly cell-specific manner. But, after fertilization, the asymmetric epigenetics acquired in the sperm and egg genomes must now become equalized, and thus go through another round of reprogramming [@fraser2016]. With the exception of imprinted regions, which need their allele-specificity to be protected from this erasure, DNAm is erased in the paternal genome through primarily active processes governed by the TET family of enzymes, which is in contrast to the maternal DNAm erasure that occurs through mostly replicative-dependent passive dilution [@xu2021].
 Lastly, at the blastocyst stage, DNAm is at it's lowest point, and new epigenetic marks can begin establishing in a highly cell-specific manner, with many cell types and tissues not reaching their final differentiated profiles until later in life.
 
+<!--- Insert Figure 1 --->
+
+(ref:introfig1-cap) DNA methylation reprogramming during development. The first major genome-wide DNA methylation erasure occurs in primordial germ cells (PGCs), and includes erasure of prior gametic imprints. DNA methylation is reestablished, but to a greater extent in sperm as compared to oocytes (egg). After fertilization, the asymmetric paternal and maternal epigenomes begin reprogramming. The paternal genome undergoes active demethylation, whereas the maternal genome undergoes demethylation more gradually through passive replication-dependent mechanisms. Gamete-specific differentially methylated regions (i.e. genomic imprints) and most repetitive sequences are protected during post-fertilization epigenetic reprogramming. At the blastocyst stage, there is the first lineage-specification event of inner cell mass (ICM) and trophectoderm (TE). By the blastocyst stage, DNAm is at its lowest point. After implantation, DNA methylation is established in both ICM and TE, but in TE remains lower, a difference that is retained through development. 
+
+```{r introfig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:introfig1-cap)", fig.scap = "DNA methylation reprogramming during development", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'introduction', 'intro-fig1.pdf'))
+```
+
 ## Placental DNA methylation variation across human populations
 
 Epigenome-wide association studies (EWAS) have shown that a substantial amount of variation in DNAm exists between human populations [@chu2017; @smith2017; @park2018; @adkins2011; @kwabi-addo2010; @liu2010; @fraser2012]. Therefore, if left unaccounted for, population-associated variation can interfere with the discovery of DNAm alterations associated with disease or environment. This type of confounding, often referred to as population stratification, can be addressed by inferring population-associated variation directly from DNAm data itself [@barfield2014; @rahmani2017; @zhou2017], as is done in genome-wide association studies (GWAS) [@tian2008].
