--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -8,6 +8,7 @@ output:
     fig_width: 6
     fig_height: 4
     latex_engine: xelatex
+output_file: "Dissertation Victor Yuan.pdf"
 header-includes:
    - \usepackage{ragged2e}
    - \usepackage{setspace}
@@ -109,11 +110,12 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 \addcontentsline{toc}{section}{List of Tables}
-<!-- Increases spacing between figure/table number and caption -->
+
 \makeatletter
      \renewcommand*\l@table{\@dottedtocline{1}{1em}{3.2em}}
 \makeatother
-<!-- -->
+
+
 \listoftables
 \clearpage
 
