--- a/Sections/04_Preface.Rmd
+++ b/Sections/04_Preface.Rmd
@@ -12,9 +12,11 @@ Parts of this dissertation have been published and include work performed by col
 
 **Chapter 1**
 
-A version of Chapter 1 has been published as a book chapter. Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293–311.
+A version of a part of Chapter 1 has been published as a book chapter. Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293–311.
 
 Copyright © 2019 Elsevier Inc.
+
+A version of a part of Chapter 1 has been accepted as publication as another book chapter.
 
 Parts of the introduction/background sections of the following two articles have been included as part of chapter 1:
 
